bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value getIndication
while (! finished){if (getIndication() = "R") {right();
                       ^BDR:5: error: not found: value getIndication
                  if (getIndication() = "L") {left();
                      ^BDR:7: error: not found: value getIndication
                  if (getIndication() = "I") {left();
                      ^BDR:10: error: not found: value getIndication
                  if (getIndication() = "A") {forward()}
                      ^BDR:11: error: not found: value getIndication
                  if (getIndication() = "B") {forward();
                      ^BDR:13: error: not found: value getIndication
                  if (getIndication() = "C") {forward();
                      ^BDR:16: error: not found: value getIndication
                  if (getIndication() = "Z") {backward()}
                      ^BDR:17: error: not found: value getIndication
                  if (getIndication() = "Y") {backward();
                      ^BDR:19: error: not found: value getIndication
                  if (getIndication() = "X") {backward();
                      ^